<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="tip_percentage">Tip Percentage: </string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="total_amount">Total Amount: %s</string>
    <string name="enter_bill_amount">Enter bill amount</string>
    <string name="tip_percentage_slider">Tip percentage slider</string>
    <string name="tip_percentage_0">Tip Percentage: 0%</string>
    <string name="tip_amount_0_00">Tip Amount: $0.00</string>
    <string name="total_amount_0_00">Total Amount: $0.00</string>
    <string name="_20">20%</string>
    <string name="_10">10%</string>
</resources>