<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextBillAmount"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:autofillHints="none"
        android:hint="@string/enter_bill_amount"
        android:inputType="numberDecimal"
        android:paddingStart="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998" />

    <com.google.android.material.slider.Slider
        android:id="@+id/sliderTipPercentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/tip_percentage_slider"
        android:stepSize="1"
        android:valueFrom="0"
        android:valueTo="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextBillAmount" />

    <Button
        android:id="@+id/buttonTenPercent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="122dp"
        android:text="@string/_10"
        app:layout_constraintEnd_toStartOf="@id/buttonTwentyPercent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sliderTipPercentage" />

    <Button
        android:id="@+id/buttonTwentyPercent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="122dp"
        android:text="@string/_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonTenPercent"
        app:layout_constraintTop_toBottomOf="@+id/sliderTipPercentage" />

    <TextView
        android:id="@+id/textViewTipPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:paddingTop="13dp"
        android:text="@string/tip_percentage_0"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTenPercent" />

    <TextView
        android:id="@+id/textViewTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="6dp"
        android:paddingTop="13dp"
        android:text="@string/tip_amount_0_00"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewTipPercentage"
        app:layout_constraintTop_toBottomOf="@+id/buttonTwentyPercent" />

    <TextView
        android:id="@+id/textViewTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="13dp"
        android:text="@string/total_amount_0_00"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTipAmount"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>